# playlist_sentiment_analyser

./: .gitignore  README.md  app.py  config.py  planning.txt  pyproject.toml
playlist_sentiment_analyser/: __init__.py  app.py  db.py  helpers.py  playlist_sentiment_analyser.db  schema.sql  songs.db
playlist_sentiment_analyser/analyse/: __init__.py  routes.py
playlist_sentiment_analyser/analyse/data/extract/: get_lyrics_data.py  get_track_data.py
playlist_sentiment_analyser/analyse/data/load/: load_to_db.py
playlist_sentiment_analyser/analyse/data/transform/: clean_lyrics_data.py  consolidate_tracks_data.py
playlist_sentiment_analyser/analyse/nlp/: language_identification.py  script.profile  sentiment_analysis.py
playlist_sentiment_analyser/analysis/: __init__.py  helpers.py  routes.py
playlist_sentiment_analyser/data/extract/: get_lyrics_data.py  get_track_data.py
playlist_sentiment_analyser/data/load/: load_to_db.py
playlist_sentiment_analyser/data/transform/: clean_lyrics_data.py  consolidate_tracks_data.py
playlist_sentiment_analyser/errors/: __init__.py
playlist_sentiment_analyser/main/: __init__.py  forms.py  routes.py
playlist_sentiment_analyser/nlp/: language_identification.py  script.calltree  sentiment_analysis.py  settings.json
playlist_sentiment_analyser/static/: styles.css
playlist_sentiment_analyser/templates/: about.html  analysis.html  index.html  layout.html  loading.html
